# rust_sodium

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE-BSD  LICENSE-MIT  README.md  appveyor.yml  index.html
ci/: run-docker.sh  run-ios.sh  run.sh
ci/docker/armv7-linux-androideabi/: Dockerfile  install-ndk.sh
ci/docker/i686-linux-android/: Dockerfile  install-sdk.sh
ci/ios/: deploy_and_run_on_ios_simulator.rs
latest/: index.html  search-index.js
latest/rust_sodium/: fn.init.html  fn.init_with_rng.html  index.html
latest/rust_sodium_sys/: constant.crypto_aead_chacha20poly1305_NPUBBYTES.html  constant.crypto_auth_BYTES.html  constant.crypto_auth_hmacsha256_BYTES.html  constant.crypto_auth_hmacsha256_KEYBYTES.html  constant.crypto_auth_hmacsha512256_BYTES.html  constant.crypto_auth_hmacsha512256_KEYBYTES.html  constant.crypto_auth_hmacsha512_BYTES.html  constant.crypto_auth_hmacsha512_KEYBYTES.html  constant.crypto_box_BEFORENMBYTES.html  constant.crypto_box_NONCEBYTES.html  constant.crypto_box_PUBLICKEYBYTES.html  constant.crypto_box_SECRETKEYBYTES.html  constant.crypto_box_ZEROBYTES.html  constant.crypto_box_curve25519xsalsa20poly1305_NONCEBYTES.html  constant.crypto_box_curve25519xsalsa20poly1305_PUBLICKEYBYTES.html  constant.crypto_box_curve25519xsalsa20poly1305_ZEROBYTES.html  constant.crypto_core_hsalsa20_CONSTBYTES.html  constant.crypto_core_hsalsa20_INPUTBYTES.html  constant.crypto_core_hsalsa20_KEYBYTES.html  constant.crypto_core_hsalsa20_OUTPUTBYTES.html  constant.crypto_core_salsa2012_CONSTBYTES.html  constant.crypto_core_salsa2012_INPUTBYTES.html  constant.crypto_core_salsa2012_KEYBYTES.html  constant.crypto_core_salsa2012_OUTPUTBYTES.html  constant.crypto_core_salsa208_INPUTBYTES.html  constant.crypto_core_salsa208_KEYBYTES.html  constant.crypto_core_salsa208_OUTPUTBYTES.html  constant.crypto_core_salsa20_CONSTBYTES.html  constant.crypto_core_salsa20_INPUTBYTES.html  constant.crypto_generichash_BYTES.html  constant.crypto_generichash_BYTES_MAX.html  constant.crypto_generichash_KEYBYTES.html  constant.crypto_generichash_KEYBYTES_MIN.html  constant.crypto_generichash_PRIMITIVE.html  constant.crypto_generichash_blake2b_BYTES.html  constant.crypto_generichash_blake2b_BYTES_MIN.html  constant.crypto_generichash_blake2b_KEYBYTES_MAX.html  constant.crypto_generichash_blake2b_KEYBYTES_MIN.html  constant.crypto_generichash_blake2b_PERSONALBYTES.html  constant.crypto_generichash_blake2b_SALTBYTES.html  (+214 more)
master/: search-index.js
master/rust_sodium/: fn.init.html  fn.init_with_rng.html  index.html
master/rust_sodium_sys/: constant.crypto_aead_chacha20poly1305_ABYTES.html  constant.crypto_aead_chacha20poly1305_KEYBYTES.html  constant.crypto_aead_chacha20poly1305_NPUBBYTES.html  constant.crypto_aead_chacha20poly1305_NSECBYTES.html  constant.crypto_auth_BYTES.html  constant.crypto_auth_KEYBYTES.html  constant.crypto_auth_PRIMITIVE.html  constant.crypto_auth_hmacsha256_BYTES.html  constant.crypto_auth_hmacsha256_KEYBYTES.html  constant.crypto_auth_hmacsha512256_BYTES.html  constant.crypto_auth_hmacsha512256_KEYBYTES.html  constant.crypto_auth_hmacsha512_BYTES.html  constant.crypto_auth_hmacsha512_KEYBYTES.html  constant.crypto_box_BEFORENMBYTES.html  constant.crypto_box_BOXZEROBYTES.html  constant.crypto_box_MACBYTES.html  constant.crypto_box_NONCEBYTES.html  constant.crypto_box_PRIMITIVE.html  constant.crypto_box_PUBLICKEYBYTES.html  constant.crypto_box_SEALBYTES.html  constant.crypto_box_SECRETKEYBYTES.html  constant.crypto_box_SEEDBYTES.html  constant.crypto_box_ZEROBYTES.html  constant.crypto_box_curve25519xsalsa20poly1305_BEFORENMBYTES.html  constant.crypto_box_curve25519xsalsa20poly1305_BOXZEROBYTES.html  constant.crypto_box_curve25519xsalsa20poly1305_MACBYTES.html  constant.crypto_box_curve25519xsalsa20poly1305_NONCEBYTES.html  constant.crypto_box_curve25519xsalsa20poly1305_PUBLICKEYBYTES.html  constant.crypto_box_curve25519xsalsa20poly1305_SECRETKEYBYTES.html  constant.crypto_box_curve25519xsalsa20poly1305_SEEDBYTES.html  constant.crypto_box_curve25519xsalsa20poly1305_ZEROBYTES.html  constant.crypto_core_hsalsa20_CONSTBYTES.html  constant.crypto_core_hsalsa20_INPUTBYTES.html  constant.crypto_core_hsalsa20_KEYBYTES.html  constant.crypto_core_hsalsa20_OUTPUTBYTES.html  constant.crypto_core_salsa2012_CONSTBYTES.html  constant.crypto_core_salsa2012_INPUTBYTES.html  constant.crypto_core_salsa2012_KEYBYTES.html  constant.crypto_core_salsa2012_OUTPUTBYTES.html  constant.crypto_core_salsa208_CONSTBYTES.html  (+308 more)
master/serde/: macro.forward_to_deserialize!.html
rust_sodium-sys/: CHANGELOG.md  Cargo.toml  LICENSE-BSD  LICENSE-MIT  README.md  build.rs  lib.rs
rust_sodium-sys/src/: bindgen.rs  core.rs  crypto_aead_chacha20poly1305.rs  crypto_auth.rs  crypto_auth_hmacsha256.rs  crypto_auth_hmacsha512.rs  crypto_auth_hmacsha512256.rs  crypto_box.rs  crypto_box_curve25519xsalsa20poly1305.rs  crypto_core_hsalsa20.rs  crypto_core_salsa20.rs  crypto_core_salsa2012.rs  crypto_core_salsa208.rs  crypto_generichash.rs  crypto_generichash_blake2b.rs  crypto_hash.rs  crypto_hash_sha256.rs  crypto_hash_sha512.rs  crypto_onetimeauth.rs  crypto_onetimeauth_poly1305.rs  crypto_pwhash_scryptsalsa208sha256.rs  crypto_scalarmult.rs  crypto_scalarmult_curve25519.rs  crypto_secretbox.rs  crypto_secretbox_xsalsa20poly1305.rs  crypto_shorthash_siphash24.rs  crypto_sign_ed25519.rs  crypto_stream.rs  crypto_stream_aes128ctr.rs  crypto_stream_chacha20.rs  crypto_stream_salsa20.rs  crypto_stream_salsa2012.rs  crypto_stream_salsa208.rs  crypto_stream_xsalsa20.rs  crypto_verify_16.rs  crypto_verify_32.rs  crypto_verify_64.rs  init_with_rng.rs  lib.rs  randombytes.rs  (+3 more)
src/: lib.rs  marshal.rs  newtype_macros.rs  randombytes.rs  test_utils.rs  utils.rs  version.rs
src/crypto/: verify.rs
src/crypto/aead/: mod.rs  (+3 more)
systest/: Cargo.toml  build.rs
systest/src/: main.rs
(+759 files in other folders)
