[package]
authors = ["MaidSafe Developers <dev@maidsafe.net>"]
description = "Fast cryptographic library for Rust (bindings to libsodium)"
documentation = "https://docs.rs/rust_sodium"
homepage = "https://maidsafe.net"
license = "MIT OR Apache-2.0"
name = "rust_sodium"
readme = "README.md"
repository = "https://github.com/maidsafe/rust_sodium"
version = "0.7.0"

[dependencies]
libc = "~0.2.36"
rand = "~0.4.2"
rust_sodium-sys = { path = "rust_sodium-sys", version = "~0.7.0" }
rustc-serialize = { version = "~0.3.24", optional = true }
serde = { version = "~1.0.27", optional = true }
unwrap = "~1.1.0"

[dev-dependencies]
rmp-serde = "~0.13.7"
rustc-serialize = "~0.3.24"
serde = "~1.0.27"
serde_json = "~1.0.9"

[features]
benchmarks = []
default = ["serde"]
