[package]
authors = ["MaidSafe Developers <dev@maidsafe.net>"]
categories = ["cryptography"]
description = "Fast cryptographic library for Rust (bindings to libsodium)"
homepage = "https://maidsafe.net"
keywords = ["crypto", "cryptographic", "cryptography", "sodium"]
license = "MIT OR Apache-2.0"
name = "rust_sodium"
readme = "README.md"
repository = "https://github.com/maidsafe/rust_sodium"
version = "0.9.0"

[dependencies]
libc = "~0.2.40"
rand = "~0.4.2"
rust_sodium-sys = { path = "rust_sodium-sys", version = "~0.9.0" }
serde = "~1.0.37"
unwrap = "~1.1.0"

[dev-dependencies]
hex = "~0.3.1"
rmp-serde = "~0.13.7"
serde_json = "~1.0.13"

[features]
benchmarks = []
