[package]
authors = ["MaidSafe Developers <dev@maidsafe.net>"]
categories = ["cryptography"]
description = "Fast cryptographic library for Rust (bindings to libsodium)"
edition = "2018"
homepage = "https://maidsafe.net"
keywords = ["crypto", "cryptographic", "cryptography", "sodium"]
license = "MIT OR BSD-3-Clause"
name = "rust_sodium"
readme = "README.md"
repository = "https://github.com/maidsafe/rust_sodium"
version = "0.10.2"

[dependencies]
libc = "~0.2.40"
rand = "~0.4.2"
rust_sodium-sys = { path = "rust_sodium-sys", version = "~0.10.3" }
serde = "~1.0.37"
unwrap = "~1.2.0"

[dev-dependencies]
hex = "~0.3.1"
rmp-serde = "~0.13.7"
serde_json = "~1.0.13"

[features]
benchmarks = []
