[package]
authors = ["MaidSafe Developers <dev@maidsafe.net>"]
build = "build.rs"
categories = ["api-bindings", "cryptography"]
description = "Raw bindings to libsodium"
homepage = "https://maidsafe.net"
keywords = ["crypto", "cryptographic", "cryptography", "sodium"]
license = "MIT OR Apache-2.0"
links = "sodium"
name = "rust_sodium-sys"
repository = "https://github.com/maidsafe/rust_sodium"
version = "0.8.0"

[dependencies]
lazy_static = "~1.0.0"
libc = "~0.2.36"
rand = "~0.4.2"
unwrap = "~1.1.0"

[build-dependencies]
cc = "~1.0.4"
flate2 = "~1.0.1"
libc = "~0.2.36"
pkg-config = "~0.3.9"
reqwest = "~0.8.5"
sha2 = "~0.7.0"
tar = "~0.4.14"
unwrap = "~1.1.0"
zip = "~0.3.1"
