[package]
authors = ["MaidSafe Developers <dev@maidsafe.net>"]
build = "build.rs"
categories = ["api-bindings", "cryptography"]
description = "Raw bindings to libsodium"
homepage = "https://maidsafe.net"
keywords = ["crypto", "cryptographic", "cryptography", "sodium"]
license = "MIT OR BSD-3-Clause"
links = "sodium"
name = "rust_sodium-sys"
repository = "https://github.com/maidsafe/rust_sodium"
version = "0.10.3"

[dependencies]
lazy_static = { version = "~1.2.0", optional = true }
libc = "~0.2.40"
rand = { version = "~0.4.2", optional = true }
unwrap = { version = "~1.2.0", optional = true }

[build-dependencies]
cc = "~1.0.15"
flate2 = "~1.0.1"
libc = "~0.2.40"
pkg-config = "~0.3.11"
http_req = "~0.2.1"
sha2 = "~0.7.1"
tar = "~0.4.15"
unwrap = "~1.2.0"
zip = "~0.3.2"

[features]
seeded-rng = ["lazy_static", "rand", "unwrap"]
