[package]
authors = ["MaidSafe Developers <dev@maidsafe.net>"]
build = "build.rs"
description = "Test that bindings match native library's interface"
homepage = "https://maidsafe.net"
license = "MIT OR Apache-2.0"
name = "systest"
version = "0.1.0"

[dependencies]
rust_sodium-sys = { path = "../rust_sodium-sys", version = "~0.5.0" }
libc = "~0.2.28"

[build-dependencies]
ctest = "~0.1.4"
unwrap = "~1.1.0"
