[package]
authors = ["MaidSafe Developers <dev@maidsafe.net>"]
build = "build.rs"
description = "Test that bindings match native library's interface"
edition = "2018"
homepage = "https://maidsafe.net"
license = "MIT OR Apache-2.0"
name = "systest"
publish = false
version = "0.2.0"

[dependencies]
rust_sodium-sys = { path = "../rust_sodium-sys", version = "~0.10.1" }
libc = "~0.2.38"

[build-dependencies]
ctest = "=0.1.4"
unwrap = "~1.2.0"
